# Task_Manager

./: .env  .gitignore  .ruff.toml  Makefile  README.md  db.sqlite3  pyproject.toml
locale/ru/LC_MESSAGES/: django.mo  django.po
static/css/: footer.css  header.css
task_manager/: .gitignore  rollbar.py  settings.py  urls.py  views.py
task_manager/labels/: mixins.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: admin.py  mixins.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: admin.py  filter.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_author_alter_task_description_and_more.py
task_manager/templates/: 404.html  base.html  footer.html  index.html  login.html  logout.html  navbar.html  trashcan.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  details.html  list.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  update.html  user_confirm_delete.html
task_manager/tests/: tests_labels.py  tests_statuses.py  tests_tasks.py  tests_users.py
task_manager/users/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_user_is_active.py  (+4 more)
(+1 files in other folders)
